# test

./: .gitignore  README.md  Readme.md  SEGMENTS.md  main.py  manual_test_editor.py  pyproject.toml  sample.xml  validate_implementation.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
pyqt6_editor/: __init__.py  core.py  gui.py  main.py
tests/: __init__.py  conftest.py  test_core.py  test_editor_logic.py  test_editor_widget.py  test_imports.py  test_segments.py
